@@ -1,3 +1,7 @@
+2026-02-16  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated Google Scholar data source.
+
 2026-02-15  Robby Stephenson  <robby@periapsis.org>
 
 	* Released Tellico 4.2.
